--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+spring.data.mongodb.uri=mongodb+srv://kunalmathurofficial:0KFdjp4YDdRsO6Q6@cluster0.owdarhr.mongodb.net/serversDB
+spring.data.mongodb.database=serversDB
 
